# core/models/work_order.py
@@ -1,5 +1,9 @@
+"""
+Contains the work order model, machines model and data access object.
+"""
+
 from uuid import uuid4
-from typing import List
+from typing import List, Literal, cast, Optional
 from dataclasses import dataclass
 from dataclasses_json import DataClassJsonMixin
 
@@ -12,9 +16,14 @@ from sqlalchemy.orm import (
 )
 
 from .common import Base
+from .conversation_status import ConversationStatusModel
 
 
+# pylint: disable=too-few-public-methods
 class WorkOrderModel(Base):
+    """
+    Work Order Model
+    """
     __tablename__ = "work_orders"
     order_id: Mapped[str] = mapped_column(
         String(36), primary_key=True, default=lambda: str(uuid4())
@@ -23,22 +32,30 @@ class WorkOrderModel(Base):
         String(36)
     )  # Assuming user_id is string from clerk
     conversation_id: Mapped[str] = mapped_column(
-        String(36), default=lambda: str(uuid4())
-    )
+        String(36), ForeignKey("conversation_status.conversation_id"))
+
     machine_id: Mapped[str] = mapped_column(
         String(36), ForeignKey("machines.machine_id")
     )
     task_name: Mapped[str] = mapped_column(String(255))
     task_desc: Mapped[str] = mapped_column(Text)
     created_at: Mapped[DateTime] = mapped_column(
-        DateTime, default=func.now
+        DateTime, default=func.now()  # pylint: disable=not-callable
     )  # Automatically sets to current time
 
-    machine = relationship("MachineModel", back_populates="work_orders")
+    conversation: Mapped["ConversationStatusModel"] = relationship(
+        "ConversationStatusModel",
+        back_populates="work_orders",
+        uselist=False)
+    machine: Mapped["MachineModel"] = relationship(
+        "MachineModel", back_populates="work_orders")
 
 
 # pylint: disable=too-few-public-methods
 class MachineModel(Base):
+    """
+    Database model for the machines.
+    """
     __tablename__ = "machines"
     machine_id: Mapped[str] = mapped_column(
         String(36), primary_key=True, default=lambda: str(uuid4())
@@ -46,7 +63,14 @@ class MachineModel(Base):
     manufacturer: Mapped[str] = mapped_column(String(255))
     model: Mapped[str] = mapped_column(String(255))
 
-    work_orders = relationship("WorkOrderModel", back_populates="machine")
+    work_orders: Mapped[List["WorkOrderModel"]] = relationship(
+        "WorkOrderModel", back_populates="machine")
+
+    def get_machine_name(self) -> str:
+        """
+        Gets the canonical machine name
+        """
+        return f"{self.manufacturer} {self.model}"
 
 
 @dataclass
@@ -58,17 +82,16 @@ class ResponseWorkOrderFormat(DataClassJsonMixin):
     machine_id: str
     machine_name: str
     conversation_id: str
+    resolved: Literal['not_completed', 'completed']
 
     @staticmethod
-    def from_dao_result(
-        work_order: WorkOrderModel, machine_name: str
-    ) -> "ResponseWorkOrderFormat":
+    def from_dao_result(work_order: WorkOrderModel
+                        ) -> "ResponseWorkOrderFormat":
         """
         Converts a work order model into a response work order format.
 
         Args:
             work_order (WorkOrderModel): The work order model
-            machine_name (str): The machine name
 
         Returns:
             ResponseWorkOrderFormat: The response work order format
@@ -76,8 +99,12 @@ class ResponseWorkOrderFormat(DataClassJsonMixin):
         return ResponseWorkOrderFormat(
             order_id=work_order.order_id,
             machine_id=work_order.machine_id,
-            machine_name=machine_name,
+            machine_name=cast(MachineModel,
+                              work_order.machine).get_machine_name(),
             conversation_id=work_order.conversation_id,
+            resolved=cast(Literal['not_completed', 'completed'],
+                          cast(ConversationStatusModel,
+                               work_order.conversation).status.name)
         )
 
 
@@ -108,7 +135,7 @@ class WorkOrderDAO:
     @staticmethod
     def get_machine_name_for_machine_id(
         session: Session, machine_id: str
-    ) -> str:
+    ) -> Optional[str]:
         """
         Gets the machine name for a specific machine ID.
 
@@ -117,7 +144,7 @@ class WorkOrderDAO:
             machine_id (str): The machine ID
 
         Returns:
-            str: The machine name
+            Optional[str]: The machine name
         """
         machine = session.query(MachineModel).get(machine_id)
         return f"{machine.manufacturer} {machine.model}" if machine else None
@@ -125,7 +152,7 @@ class WorkOrderDAO:
     @staticmethod
     def get_user_id_for_conversation_id(
         session: Session, conversation_id: str
-    ) -> str:
+    ) -> Optional[str]:
         """
         Gets the user ID for a specific conversation ID.
 
@@ -134,7 +161,7 @@ class WorkOrderDAO:
             conversation_id (str): The conversation ID
 
         Returns:
-            str: The user ID
+            Optional[str]: The user ID
         """
         work_order = (
             session.query(WorkOrderModel)
